# advanced-nnue-program

./: .gitignore  arch-speculation.txt  boot.txt  commands.txt  comparison.ipynb  convert_correlations.py  decompress-old.sh  decompress.sh  elo-scaling.ipynb  expo-nt-comparison.py  hl-width-gauntlet.sh  main.py  matplotlibrc.tmp  matrix.ipynb  net-size-guantlet-ratings-original.txt  net-size-guantlet-ratings.txt  opt-plot.py  plot-loss.ipynb  plot-loss.py  plot-piece-counts.py  plot-wdl-blend-simple.py  plot-wdl-blend.py  plot_activation.py  plot_csv_data.py  pyproject.toml  wdl-gauntlet-ratings.txt  wdl-gauntlet.sh
permuter/: .gitignore  Cargo.toml
permuter/src/: main.rs
