[project]
name = "advanced-nnue-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "qbstyles>=0.1.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
